--- a/dispatcher/pom.xml
+++ b/dispatcher/pom.xml
@@ -15,7 +15,7 @@
         <maven.compiler.source>13</maven.compiler.source>
         <maven.compiler.target>13</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <telegrambot.starter.version>5.0.1</telegrambot.starter.version>
+        <telegrambot.starter.version>6.0.1</telegrambot.starter.version>
     </properties>
 
     <dependencies>
@@ -28,6 +28,12 @@
             <groupId>org.telegram</groupId>
             <artifactId>telegrambots-spring-boot-starter</artifactId>
             <version>${telegrambot.starter.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ru.openres</groupId>
+            <artifactId>common-rabbitmq</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
